--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -81,7 +81,7 @@
     </div>
 
     <div class="rotator-slider">
-      <div class="slide">
+      <div class="slide active">
         <img src="./img/slide1.jpg" alt="Slide 1">
       </div>
 
