--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -76,7 +76,7 @@
       </form>
       <div class="message" style="display:none;">
         <p>Thank you, <span id="firstNameResult"></span>.</p>
-        <p>Your information has been accepted, we will contact you in 3 business days.</p>
+        <p>Your application has been accepted, we will contact you in 3 business days.</p>
       </div>
     </div>
 
