--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -67,7 +67,7 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
         <label for="phone">Phone Number:</label>
-        <input type="tel" id="phone" name="phone" required>
+        <input type="tel" pattern="^\d{3}-\d{3}-\d{4}$" id="phone" name="phone" required>
         <label for="text">Accommodation preferences:</label>
         <textarea id="text" name="text" rows="4" required></textarea>
         <div class="submit-button">
@@ -95,126 +95,130 @@
     </div>
   </div>
 
-  <!-- First Section - 3 Cards -->
-  <section class="cards-section">
-    <div class="card">
-      <img src="./img/Newman College.jpg" alt="Newman College">
-      <a href="#">
-        <h3>Newman College</h3>
-      </a>
-      <p>Newman College is a co-educational residential College affiliated with the University of Melbourne. </p>
-    </div>
-    <div class="card">
-      <img src="./img/Ormond College.jpg" alt="Ormond College">
-      <a href="#">
-        <h3>Ormond College</h3>
-      </a>
-      <p>Ormond College occupies 10 acres of land on the northern end of the University of Melbourne’s Parkville campus.
-      </p>
-    </div>
-    <div class="card">
-      <img src="./img/Queen's College.jpg" alt="Queen's College">
-      <a href="#">
-        <h3>Queen's College</h3>
-      </a>
-      <p>Queen’s College will take your university experience to the next level. At Queen’s, you’ll discover a world of
-        people who are passionate, curious and inspired. </p>
-    </div>
-  </section>
+  <section class="main-content">
+    <!-- First Section - 3 Cards -->
+    <section class="cards-section">
+      <div class="card">
+        <img src="./img/Newman College.jpg" alt="Newman College">
+        <a href="#">
+          <h3>Newman College</h3>
+        </a>
+        <p>Newman College is a co-educational residential College affiliated with the University of Melbourne. </p>
+      </div>
+      <div class="card">
+        <img src="./img/Ormond College.jpg" alt="Ormond College">
+        <a href="#">
+          <h3>Ormond College</h3>
+        </a>
+        <p>Ormond College occupies 10 acres of land on the northern end of the University of Melbourne’s Parkville
+          campus.
+        </p>
+      </div>
+      <div class="card">
+        <img src="./img/Queen's College.jpg" alt="Queen's College">
+        <a href="#">
+          <h3>Queen's College</h3>
+        </a>
+        <p>Queen’s College will take your university experience to the next level. At Queen’s, you’ll discover a world
+          of
+          people who are passionate, curious and inspired. </p>
+      </div>
+    </section>
 
-  <!-- Second Section - Image Left Text Right -->
-  <section class="image-text-section">
-    <img src="./img/Schedule a tour.jpg" alt="Schedule a tour">
-    <div class="text">
-      <h2>Schedule a tour</h2>
-      <p>Interested in seeing our beautiful campus and facilities in person? Schedule a tour today and let one of our
-        knowledgeable staff members show you around. You'll get an up-close look at our living spaces, recreational
-        areas, and state-of-the-art amenities, and you'll have the opportunity to ask any questions you may have about
-        our programs and services. Don't wait, schedule your tour now!</p>
-      <button class="cta-button">Schedule a tour</button>
-    </div>
-  </section>
+    <!-- Second Section - Image Left Text Right -->
+    <section class="image-text-section">
+      <img src="./img/Schedule a tour.jpg" alt="Schedule a tour">
+      <div class="text">
+        <h2>Schedule a tour</h2>
+        <p>Interested in seeing our beautiful campus and facilities in person? Schedule a tour today and let one of our
+          knowledgeable staff members show you around. You'll get an up-close look at our living spaces, recreational
+          areas, and state-of-the-art amenities, and you'll have the opportunity to ask any questions you may have about
+          our programs and services. Don't wait, schedule your tour now!</p>
+        <button class="cta-button">Schedule a tour</button>
+      </div>
+    </section>
 
-  <!-- Third Section - Thumbnail Gallery -->
-  <section class="thumbnail-gallery">
-    <h2>Residential College Gallery</h2>
-    <div class="gallery-row">
-      <img src="./img/gallery img1.jpg" alt="Gallery Image 1">
-      <img src="./img/gallery img2.jpg" alt="Gallery Image 2">
-      <img src="./img/gallery img3.jpg" alt="Gallery Image 3">
-      <img src="./img/gallery img4.jpg" alt="Gallery Image 4">
-    </div>
-    <div class="gallery-row">
-      <img src="./img/gallery img5.jpg" alt="Gallery Image 5">
-      <img src="./img/gallery img6.jpg" alt="Gallery Image 6">
-      <img src="./img/gallery img7.jpg" alt="Gallery Image 7">
-      <img src="./img/gallery img8.jpg" alt="Gallery Image 8">
-    </div>
-  </section>
+    <!-- Third Section - Thumbnail Gallery -->
+    <section class="thumbnail-gallery">
+      <h2>Residential College Gallery</h2>
+      <div class="gallery-row">
+        <img src="./img/gallery img1.jpg" alt="Gallery Image 1">
+        <img src="./img/gallery img2.jpg" alt="Gallery Image 2">
+        <img src="./img/gallery img3.jpg" alt="Gallery Image 3">
+        <img src="./img/gallery img4.jpg" alt="Gallery Image 4">
+        <img src="./img/gallery img5.jpg" alt="Gallery Image 5">
+        <img src="./img/gallery img6.jpg" alt="Gallery Image 6">
+        <img src="./img/gallery img7.jpg" alt="Gallery Image 7">
+        <img src="./img/gallery img8.jpg" alt="Gallery Image 8">
+      </div>
+    </section>
 
-  <!-- The lightbox modal -->
-  <div id="lightbox-modal" class="lightbox-modal">
-    <span class="close-btn">&times;</span>
-    <div class="lightbox-controls">
-      <button class="prev-btn">&lt;</button>
-      <button class="next-btn">&gt;</button>
+    <!-- The lightbox modal -->
+    <div id="lightbox-modal" class="lightbox-modal">
+      <span class="close-btn">&times;</span>
+      <div class="lightbox-controls">
+        <button class="prev-btn">&lt;</button>
+        <button class="next-btn">&gt;</button>
+      </div>
+      <img id="lightbox-img" class="lightbox-img">
     </div>
-    <img id="lightbox-img" class="lightbox-img">
-  </div>
 
-  <!-- Fourth Section - Content Block -->
-  <section class="content-block">
-    <h2>Useful information</h2>
-    <div class="content">
-      <div>
-        <h3 class="toggle">Accommodation locations</h3>
-        <div class="toggle-content">
-          <p>While all of our Colleges offer the same great levels of support, each have their own distinct
-            personalities and culture.</p>
-          <p>Find out more about each College below and discover which one is the right fit for you.</p>
-          <p>Remember, you’ll have the chance to preference Colleges in your application, so as you do your research,
-            add them to your Favourites to keep track.</p>
-          <ul>
-            <li><a href="#">Newman College</a></li>
-            <li><a href="#">Ormond College</a></li>
-            <li><a href="#">Queen's College</a></li>
-          </ul>
+    <!-- Fourth Section - Content Block -->
+    <section class="content-block">
+      <h2>Useful information</h2>
+      <div class="content">
+        <div>
+          <h3 class="toggle">Accommodation locations</h3>
+          <div class="toggle-content">
+            <p>While all of our Colleges offer the same great levels of support, each have their own distinct
+              personalities and culture.</p>
+            <p>Find out more about each College below and discover which one is the right fit for you.</p>
+            <p>Remember, you’ll have the chance to preference Colleges in your application, so as you do your research,
+              add them to your Favourites to keep track.</p>
+            <ul>
+              <li><a href="#">Newman College</a></li>
+              <li><a href="#">Ormond College</a></li>
+              <li><a href="#">Queen's College</a></li>
+            </ul>
+          </div>
+        </div>
+        <div>
+          <h3 class="toggle">Local Input Networking and Communications (LINC) Committees</h3>
+          <div class="toggle-content">
+            <p>LINC committees will provide a vital link between residential colleges and the community. There will be
+              one
+              LINC committee for each of the nine residential colleges. They comprise community members who provide
+              advice
+              and support to the college manager and staff.</p>
+            <ul>
+              <li><a href="#">The role of the committee</a></li>
+              <li><a href="#">Becoming a committee member</a></li>
+            </ul>
+          </div>
+        </div>
+        <div>
+          <h3 class="toggle">Useful links</h3>
+          <div class="toggle-content">
+            <ul>
+              <li><a href="#">Financial assistance</a></li>
+              <li><a href="#">Support organisations</a></li>
+              <li><a href="#">Student concerns and complaints</a></li>
+            </ul>
+          </div>
         </div>
       </div>
-      <div>
-        <h3 class="toggle">Local Input Networking and Communications (LINC) Committees</h3>
-        <div class="toggle-content">
-          <p>LINC committees will provide a vital link between residential colleges and the community. There will be one
-            LINC committee for each of the nine residential colleges. They comprise community members who provide advice
-            and support to the college manager and staff.</p>
-          <ul>
-            <li><a href="#">The role of the committee</a></li>
-            <li><a href="#">Becoming a committee member</a></li>
-          </ul>
-        </div>
-      </div>
-      <div>
-        <h3 class="toggle">Useful links</h3>
-        <div class="toggle-content">
-          <ul>
-            <li><a href="#">Financial assistance</a></li>
-            <li><a href="#">Support organisations</a></li>
-            <li><a href="#">Student concerns and complaints</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
 
-  <section class="video-section">
-    <div class="container">
-      <h2>Visual University Tour</h2>
-      <div class="video-wrapper">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section class="video-section">
+      <div class="container">
+        <h2>Visual University Tour</h2>
+        <div class="video-wrapper">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
-    </div>
+    </section>
   </section>
 
   <!-- Footer -->
