start to add responsive design

--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -54,6 +54,7 @@
       <input type="text" class="searchinput" placeholder="search...">
       <button class="btn"><i class="fas fa-search"></i></button>
     </div>
+    <!-- <button class="menu-btn"><i class="fas fa-bars"></i></button> -->
   </header>
 
   <div class="sub-header">
