--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Residential College Landing Page</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
@@ -14,6 +15,7 @@
   <header class="header">
     <div class="logo">
       <a href="#"><img src="./img/University logo.svg" alt="Your Logo"></a>
+      <button class="menu-toggle"><i class="fas fa-bars"></i></button>
     </div>
     <nav class="menu">
       <ul>
@@ -54,7 +56,6 @@
       <input type="text" class="searchinput" placeholder="search...">
       <button class="btn"><i class="fas fa-search"></i></button>
     </div>
-    <!-- <button class="menu-btn"><i class="fas fa-bars"></i></button> -->
   </header>
 
   <div class="sub-header">
