add mobile menu

--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -15,43 +15,45 @@
   <header class="header">
     <div class="logo">
       <a href="#"><img src="./img/University logo.svg" alt="Your Logo"></a>
-      <button class="menu-toggle"><i class="fas fa-bars"></i></button>
     </div>
-    <nav class="menu">
-      <ul>
-        <li class="sub-menu">
-          <a href="#">Study with us</a>
-          <ul>
-            <li><a href="#">Find a course</a></li>
-            <li><a href="#">How to apply</a></li>
-          </ul>
-        </li>
+    <div class="menu-container">
+      <button class="menu-toggle"><i class="fas fa-bars"></i></button>
+      <nav class="menu">
+        <ul>
+          <li class="sub-menu">
+            <a href="#">Study with us</a>
+            <ul>
+              <li><a href="#">Find a course</a></li>
+              <li><a href="#">How to apply</a></li>
+            </ul>
+          </li>
 
-        <li class="sub-menu">
-          <a href="#">Student life</a>
-          <ul>
-            <li><a href="#">Discovery Melbourne</a></li>
-            <li><a href="#">Information for...</a></li>
-          </ul>
-        </li>
+          <li class="sub-menu">
+            <a href="#">Student life</a>
+            <ul>
+              <li><a href="#">Discovery Melbourne</a></li>
+              <li><a href="#">Information for...</a></li>
+            </ul>
+          </li>
 
-        <li class="sub-menu">
-          <a href="#">Accommodation</a>
-          <ul>
-            <li><a href="#">Accommodation options</a></li>
-            <li><a href="#">Apply for accommodation</a></li>
-            <li><a href="#">Moving support for international students</a></li>
-          </ul>
-        </li>
+          <li class="sub-menu">
+            <a href="#">Accommodation</a>
+            <ul>
+              <li><a href="#">Accommodation options</a></li>
+              <li><a href="#">Apply for accommodation</a></li>
+              <li><a href="#">Moving support for international students</a></li>
+            </ul>
+          </li>
 
-        <li><a href="#">Talk to us</a>
-          <ul>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">Information for</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
+          <li><a href="#">Talk to us</a>
+            <ul>
+              <li><a href="#">Contact us</a></li>
+              <li><a href="#">Information for</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="search">
       <input type="text" class="searchinput" placeholder="search...">
       <button class="btn"><i class="fas fa-search"></i></button>
