make performance better

--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -204,7 +204,7 @@
           <div class="toggle-content">
             <ul>
               <li><a href="#">Financial assistance</a></li>
-              <li><a href="#">Support organisations</a></li>
+              <li><a href="#">Support orgnaisations</a></li>
               <li><a href="#">Student concerns and complaints</a></li>
             </ul>
           </div>
