--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -107,7 +107,8 @@
     <!-- First Section - 3 Cards -->
     <section class="cards-section">
       <div class="card">
-        <img src="./img/Newman College.jpg"
+        <img srcset="./img/Newman-College.jpg 2000w,
+        ./img/Newman-College-thumb.jpg 500w" src="./img/Newman-College-thumb.jpg"
           alt="Newman College - co-educational residential College affiliated with the University of Melbourne">
         <a href="#">
           <h3>Newman College</h3>
@@ -115,7 +116,8 @@
         <p>Newman College is a co-educational residential College affiliated with the University of Melbourne. </p>
       </div>
       <div class="card">
-        <img src="./img/Ormond College.jpg"
+        <img srcset="./img/Ormond-College.jpg 2000w,
+        ./img/Ormond-College-thumb.jpg 500w" src="./img/Ormond-College-thumb.jpg"
           alt="Ormond College - 10 acres of land on the northern end of the University of Melbourne’s Parkville campus">
         <a href="#">
           <h3>Ormond College</h3>
@@ -125,7 +127,9 @@
         </p>
       </div>
       <div class="card">
-        <img src="./img/Queen's College.jpg" alt="Queen's College - take your university experience to the next level">
+        <img srcset="./img/Queen's-College.jpg 2000w,
+        ./img/Queen's-College-thumb.jpg 500w" src="./img/Queen's-College-thumb.jpg"
+          alt="Queen's College - take your university experience to the next level">
         <a href="#">
           <h3>Queen's College</h3>
         </a>
@@ -149,17 +153,18 @@
     <section class="thumbnail-gallery">
       <h2>Residential College Gallery</h2>
       <div class="gallery-row">
-        <img src="./img/gallery img1.jpg" alt="Gallery Image 1">
-        <img src="./img/gallery img2.jpg" alt="Gallery Image 2">
-        <img src="./img/gallery img3.jpg" alt="Gallery Image 3">
-        <img src="./img/gallery img4.jpg" alt="Gallery Image 4">
-        <img src="./img/gallery img5.jpg" alt="Gallery Image 5">
-        <img src="./img/gallery img6.jpg" alt="Gallery Image 6">
-        <img src="./img/gallery img7.jpg" alt="Gallery Image 7">
-        <img src="./img/gallery img8.jpg" alt="Gallery Image 8">
+        <img src="./img/gallery-img1-thumb.jpg" data-full="./img/gallery-img1.jpg" alt="Gallery Image 1">
+        <img src="./img/gallery-img2-thumb.jpg" data-full="./img/gallery-img2.jpg" alt="Gallery Image 2">
+        <img src="./img/gallery-img3-thumb.jpg" data-full="./img/gallery-img3.jpg" alt="Gallery Image 3">
+        <img src="./img/gallery-img4-thumb.jpg" data-full="./img/gallery-img4.jpg" alt="Gallery Image 4">
+        <img src="./img/gallery-img5-thumb.jpg" data-full="./img/gallery-img5.jpg" alt="Gallery Image 5">
+        <img src="./img/gallery-img6-thumb.jpg" data-full="./img/gallery-img6.jpg" alt="Gallery Image 6">
+        <img src="./img/gallery-img7-thumb.jpg" data-full="./img/gallery-img7.jpg" alt="Gallery Image 7">
+        <img src="./img/gallery-img8-thumb.jpg" data-full="./img/gallery-img8.jpg" alt="Gallery Image 8">
       </div>
     </section>
-
+    <!-- srcset="./img/gallery-img1.jpg 2000w,
+    ./img/gallery-img1-thumb.jpg 500w" -->
     <!-- The lightbox modal -->
     <div id="lightbox-modal" class="lightbox-modal">
       <span class="close-btn">&times;</span>
@@ -169,6 +174,7 @@
       </div>
       <img id="lightbox-img" class="lightbox-img">
     </div>
+
 
     <!-- Fourth Section - Content Block -->
     <section class="content-block">
