--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <!-- header -->
   <header class="header">
     <a href="#sub-header" class="skip-to-content" tabindex="1">Skip to sub header</a>
     <div class="logo">
@@ -62,7 +63,7 @@
           class="fas fa-search"></i></button>
     </div>
   </header>
-
+  <!-- sub header -->
   <div id="sub-header" class="sub-header">
     <div class="contact-form">
       <h2>Accommodation Application</h2>
@@ -87,7 +88,6 @@
       </div>
     </div>
 
-
     <div class="rotator-slider">
       <div class="slide active">
         <img src="./img/slide1.jpg" alt="Slide 1">
@@ -103,6 +103,7 @@
     </div>
   </div>
 
+  <!-- main content -->
   <section class="main-content">
     <!-- First Section - 3 Cards -->
     <section class="cards-section">
@@ -140,7 +141,7 @@
 
     <!-- Second Section - Image Left Text Right -->
     <section class="image-text-section">
-      <img src="./img/Schedule a tour.jpg" alt="Person scheduling a tour of the campus">
+      <img src="./img/Schedule a tour-thumb.jpg" alt="Person scheduling a tour of the campus">
       <h2>Schedule a tour</h2>
       <p>Interested in seeing our beautiful campus and facilities in person? Schedule a tour today and let one of our
         knowledgeable staff members show you around. You'll get an up-close look at our living spaces, recreational
@@ -163,9 +164,7 @@
         <img src="./img/gallery-img8-thumb.jpg" data-full="./img/gallery-img8.jpg" alt="Gallery Image 8">
       </div>
     </section>
-    <!-- srcset="./img/gallery-img1.jpg 2000w,
-    ./img/gallery-img1-thumb.jpg 500w" -->
-    <!-- The lightbox modal -->
+
     <div id="lightbox-modal" class="lightbox-modal">
       <span class="close-btn">&times;</span>
       <div class="lightbox-controls">
@@ -222,7 +221,7 @@
       </div>
     </section>
 
-
+    <!-- Fifth section - Video Section -->
     <section class="video-section">
       <div class="video-container">
         <h2>Visual University Tour</h2>
@@ -234,7 +233,7 @@
       </div>
     </section>
   </section>
-
+  <!-- back to top button -->
   <button id="back-to-top" class="back-to-top">Top</button>
 
   <!-- Footer -->
