--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Residential College Landing Page</title>
-  <link rel="icon" href="./img/favicon.gif" type="image/gif" sizes="16x16">	
+  <link rel="icon" href="./img/favicon.gif" type="image/gif" sizes="16x16">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -265,7 +265,9 @@
   </footer>
 
   <!-- script  -->
-  <script src="landingpage.js"></script>
+  <script src="header.js"></script>
+  <script src="subheader.js"></script>
+  <script src="main-content.js"></script>
 </body>
 
 </html>
