--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -67,13 +67,13 @@
   <!-- sub header -->
   <div id="sub-header" class="sub-header">
     <div class="contact-form">
-      <h2>Accommodation Application</h2>
+      <h3>Accommodation Application</h3>
       <form id="myForm" novalidate onsubmit="event.preventDefault(); submitForm()">
         <label for="firstName" class="required">First Name:</label>
         <input type="text" id="firstName" name="firstName" required>
         <label for="lastName" class="required">Last Name:</label>
         <input type="text" id="lastName" name="lastName" required>
-        <label for="email" class="required">Email: (test@example.com)</label>
+        <label for="email" class="required">Email: (abc@email.com)</label>
         <input type="email" id="email" name="email" required>
         <label for="phone" class="required">Phone Number: (0123 456 789)</label>
         <input type="tel" id="phone" name="phone" required>
@@ -112,18 +112,14 @@
         <img srcset="./img/Newman-College.jpg 2000w,
         ./img/Newman-College-thumb.jpg 500w" src="./img/Newman-College-thumb.jpg"
           alt="Newman College - co-educational residential College affiliated with the University of Melbourne">
-        <a href="#">
-          <h3>Newman College</h3>
-        </a>
+        <h3>Newman College</h3>
         <p>Newman College is a co-educational residential College affiliated with the University of Melbourne. </p>
       </div>
       <div class="card">
         <img srcset="./img/Ormond-College.jpg 2000w,
         ./img/Ormond-College-thumb.jpg 500w" src="./img/Ormond-College-thumb.jpg"
           alt="Ormond College - 10 acres of land on the northern end of the University of Melbourne’s Parkville campus">
-        <a href="#">
-          <h3>Ormond College</h3>
-        </a>
+        <h3>Ormond College</h3>
         <p>Ormond College occupies 10 acres of land on the northern end of the University of Melbourne’s Parkville
           campus.
         </p>
@@ -132,9 +128,7 @@
         <img srcset="./img/Queen's-College.jpg 2000w,
         ./img/Queen's-College-thumb.jpg 500w" src="./img/Queen's-College-thumb.jpg"
           alt="Queen's College - take your university experience to the next level">
-        <a href="#">
-          <h3>Queen's College</h3>
-        </a>
+        <h3>Queen's College</h3>
         <p>Queen’s College will take your university experience to the next level. People here are passionate, curious
           and inspired. </p>
       </div>
@@ -181,7 +175,7 @@
       <h2>Useful information</h2>
       <div class="content">
         <div>
-          <h3 class="toggle">Accommodation locations</h3>
+          <h4 class="toggle">Accommodation locations</h4>
           <div class="toggle-content">
             <p>While all of our Colleges offer the same great levels of support, each have their own distinct
               personalities and culture. Find out more about each College below and discover which one is the right fit
@@ -196,7 +190,7 @@
           </div>
         </div>
         <div>
-          <h3 class="toggle">Local Input Networking and Communications (LINC) Committees</h3>
+          <h4 class="toggle">Local Input Networking and Communications (LINC) Committees</h4>
           <div class="toggle-content">
             <p>LINC committees will provide a vital link between residential colleges and the community. There will be
               one
@@ -210,7 +204,7 @@
           </div>
         </div>
         <div>
-          <h3 class="toggle">Useful links</h3>
+          <h4 class="toggle">Useful links</h4>
           <div class="toggle-content">
             <ul>
               <li><a href="#">Financial assistance</a></li>
@@ -241,7 +235,7 @@
   <footer aria-label="Website Footer">
     <div class="footer-cols">
       <div class="col">
-        <h4>SITE NAVIGATION</h4>
+        <h5>SITE NAVIGATION</h5>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About Us</a></li>
@@ -250,7 +244,7 @@
         </ul>
       </div>
       <div class="col">
-        <h4>LEGAL & POLICIES</h4>
+        <h5>LEGAL & POLICIES</h5>
         <ul>
           <li><a href="#">Policies</a></li>
           <li><a href="#">Terms of Use</a></li>
@@ -261,7 +255,9 @@
         <img src="./img/unimelb-logo.svg" alt="Residential College logo">
       </div>
     </div>
-    <div class="footer-tagline">Built with Acora</div>
+    <div class="footer-tagline">
+      <img src="./img/acora-built-sm-7.png" alt="tag line of built and powered by Acora">
+    </div>
   </footer>
 
   <!-- script  -->
